Fix exception handling and code style in PermutationWorkerFactory